--- a/style.css
+++ b/style.css
@@ -35,3 +35,15 @@ button {
   border-radius: 5px;
   box-shadow: 2px 5px 5px #333;
 }
+
+#high {
+  background-color: red;
+}
+
+#med {
+  background-color: yellow;
+}
+
+#low {
+  background-color: green;
+}
